--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <li><a href="./src/w4/index.html">4주차</a></li>
       <li><a href="./src/w4/w4-2.html">4주차 두번째</a></li>
       <li><a href="./src/w4/assignment/w4.html">assignment</a></li>
+      <li><a href="./src/w5/index.html">5주차</a></li>
+      <li><a href="./src/w6/card.html">6주차</a></li>
+      <li><a href="./src/w6/flex basic.html">6주차 flex basic</a></li>
     </ol>
   </body>
 </html>
