--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <li><a href="./src/w5/index.html">5주차</a></li>
       <li><a href="./src/w6/card.html">6주차</a></li>
       <li><a href="./src/w6/flex basic.html">6주차 flex basic</a></li>
+      <li>
+        <a href="./src/w7-2/flex basic(at clss).html">7주차 flex basic</a>
+      </li>
     </ol>
   </body>
 </html>
