--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <li>
         <a href="./src/w7-2/flex basic(at clss).html">7주차 flex basic</a>
       </li>
+      <li>
+        <a href="./src/w7/assignment/index.html">7주차 과제</a>
+      </li>
     </ol>
   </body>
 </html>
