--- a/src/w7/assignment/index.html
+++ b/src/w7/assignment/index.html
@@ -48,5 +48,39 @@
       <div class="section">Abstract support</div>
       <p>Get in touch with a human.</p>
     </div>
+    <div class="bottom">
+      Abstract
+      <p style="font-size: 1rem">Start Trial</p>
+      <p style="font-size: 1rem">Pricing</p>
+      <p style="font-size: 1rem">Download</p>
+    </div>
+    <div class="bottom">
+      Resources
+      <p style="font-size: 1rem">Blog</p>
+      <p style="font-size: 1rem">Help Center</p>
+      <p style="font-size: 1rem">Release Notes</p>
+      <p style="font-size: 1rem">Status</p>
+    </div>
+    <div class="bottom">
+      Community
+      <p style="font-size: 1rem">Twitter</p>
+      <p style="font-size: 1rem">Linkedln</p>
+      <p style="font-size: 1rem">Facebook</p>
+      <p style="font-size: 1rem">Dribbble</p>
+      <p style="font-size: 1rem">Podcast</p>
+    </div>
+    <div class="bottom">
+      Company
+      <p style="font-size: 1rem">About US</p>
+      <p style="font-size: 1rem">Careers</p>
+      <p style="font-size: 1rem">Legal</p>
+    </div>
+    <div class="bottom">
+      Contact Us
+      <p style="font-size: 1rem">info@abstract.com</p>
+    </div>
+    <div class="bottom">
+      Copyright 2023 Abstract Studio Design, Inc All rights reserved
+    </div>
   </body>
 </html>
