--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
       <li>
         <a href="./src/w7/assignment/index.html">7주차 과제</a>
       </li>
+      <li>
+        <a href="./src/w7/assignment-2/index.html">7주차 과제 풀이</a>
+      </li>
+      <li>
+        <a href="./src/w9/card.html">9주차</a>
+      </li>
+      <li>
+        <a href="./src/w9/pos-fix/index.html">9주차2</a>
+        <a href="./src/w10/grid_stp1/index.html">10주차</a>
+        <a href="./src/w10/grid_stp2/index.html">10주차2</a>
+        <a href="./src/w10/assignment/index.html">10주차 과제</a>
+      </li>
     </ol>
   </body>
 </html>
