10주차 과제 수정

--- a/src/w10/assignment/index.html
+++ b/src/w10/assignment/index.html
@@ -118,8 +118,20 @@
     <div class="main_name">
       <li class="main_name__type-1">Featured Collections</li>
       <li class="main_name__type-2">
-        Newly added accessibility resources, guides, and more.
+        Handpicked and curated collections around accessibility.
       </li>
+      <div class="container grid grid--opt-3">
+        <div class="grid__item-grid__item--nth-7">
+          <li>Disability Employment</li>
+        </div>
+        <div class="grid__item-grid__item--nth-8">
+          <li>Making Accessible Color Combos</li>
+        </div>
+        <div class="grid__item-grid__item--nth-9">
+          <li>Tips and Tricks for Inclusive Social Media</li>
+        </div>
+      </div>
     </div>
+    <div class="bottom"></div>
   </body>
 </html>
