--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         <a href="./src/w10/grid_stp2/index.html">10주차2</a>
         <a href="./src/w10/assignment/index.html">10주차 과제</a>
       </li>
+      <li>
+        <a href="./src/w11/step1/index.html">11주차 step1</a>
+      </li>
+      <li>
+        <a href="./src/w11/step2/index.html">11주차 step2</a>
+      </li>
     </ol>
   </body>
 </html>
