--- a/index.html
+++ b/index.html
@@ -50,5 +50,11 @@
     <li>
       <a href="./src/w12/step4/index.html">12주차 step4</a>
     </li>
+    <li>
+      <a href="./src/w13/video/index.html">13주차 video</a>
+    </li>
+    <li>
+      <a href="./src/w13/step2/index.html">13주차 lottie</a>
+    </li>
   </body>
 </html>
